[gd_scene load_steps=12 format=3 uid="uid://b5vj4teu3fvlo"]

[ext_resource type="PackedScene" uid="uid://dwrg8mixvr10l" path="res://kinematic/kinematic.tscn" id="1_es5ms"]
[ext_resource type="Script" uid="uid://bgae1fgnkvo8c" path="res://kinematic/enemy/enemy.gd" id="2_vqldv"]
[ext_resource type="PackedScene" uid="uid://cago0a3f2aa63" path="res://collision/soft_collider/soft_collider.tscn" id="4_jqkxg"]
[ext_resource type="PackedScene" uid="uid://r2gbukoylhu0" path="res://collision/boxes/hurt_box/hurt_box.tscn" id="5_xyspp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xyspp"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xyspp"]
resource_local_to_scene = true
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vec2w"]
radius = 1024.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vec2w"]
radius = 17.0
height = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y43nc"]
radius = 4.0
height = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyspp"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vec2w"]
bg_color = Color(0, 1, 0, 1)

[node name="Enemy" groups=["enemies"] instance=ExtResource("1_es5ms")]
collision_layer = 4
collision_mask = 5
script = ExtResource("2_vqldv")
soft_collider_strength = 64.0
max_warn_delay = 1.0
health_drop_chance = 0.4
bounce_duration = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_xyspp")

[node name="SoftCollider" parent="." index="1" instance=ExtResource("4_jqkxg")]

[node name="CollisionShape2D" parent="SoftCollider" index="0"]
shape = SubResource("CircleShape2D_xyspp")

[node name="Vision" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision" index="0"]
shape = SubResource("CircleShape2D_vec2w")

[node name="HitBox" parent="." index="3" groups=["enemy_hit_boxes"]]
collision_layer = 32

[node name="CollisionShape2D" parent="HitBox" index="0"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_vec2w")

[node name="HurtBox" parent="." index="4" instance=ExtResource("5_xyspp")]
collision_mask = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_y43nc")
disabled = true

[node name="WarningSound" type="AudioStreamPlayer2D" parent="." index="5"]

[node name="WarningSoundCooldown" type="Timer" parent="." index="6"]
wait_time = 10.0
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="." index="7"]
offset_left = -16.0
offset_top = -37.0
offset_right = 16.0
offset_bottom = -35.0
theme_override_styles/background = SubResource("StyleBoxFlat_xyspp")
theme_override_styles/fill = SubResource("StyleBoxFlat_vec2w")
value = 75.0
show_percentage = false

[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
[connection signal="health_changed" from="HitBox" to="." method="_on_hit_box_health_changed"]
[connection signal="max_health_changed" from="HitBox" to="." method="_on_hit_box_max_health_changed"]
[connection signal="timeout" from="WarningSoundCooldown" to="." method="_on_warning_sound_cooldown_timeout"]

[editable path="SoftCollider"]
[editable path="HitBox"]
[editable path="HurtBox"]
